--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <main>
       <section class="card about" id="about">
         <h2>About</h2>
-        <p><strong>Armin</strong> is a programmer based in Iran. You specialize in building DBcake, with a focus on Database. Mention a notable achievement, a short story about how you started, or what motivates you.</p>
-        <p><strong>Current focus</strong> — Briefly state what you are working on now and what you want to do next.</p>
+        <p><strong>Armin</strong> is a programmer based in Iran. Armin is working on DBcake, with a focus on Database.</p>
+        <p><strong>Current focus</strong> I focus on my future :D.</p>
       </section>
 
       <section class="card projects" id="projects">
@@ -99,3 +99,4 @@
 
 </body>
 </html>
+
